--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,32 +1,60 @@
-<div class="jumbotron">
-    <img src="">
-</div>
-
-<h2>Burger Orders</h2>
-<ul>
-    {{#each burgers}}
-        {{#unless devoured}}
-            {{> burgers/burger-block devoured=false}}
-        {{/unless}}
-    {{/each}}
-</ul>
-
-
-<h2>Devoured Burgers</h2>
-<ul>
-    {{#each burgers}}
-        {{#if devoured}}
-            {{> burgers/burger-block devoured=true}}
-        {{/if}}
-    {{/each}}
-</ul>
-
-
-<h2>Place an Order</h2>
-<form class="create-form">
-    <div class="form-group">
-        <label for="burger">Burger Name:</label>
-        <input id="burger" name="name" type="text">
+<div class="container">
+    <div class="row mb-5">
+        <div class="col text-center">
+            <h1>It's Burger Time!</h1>
+            <img src="/assets/img/cuteburger.png" alt="burger" width="300px">
+            <h5>Are you ready to devour some burgers???</h5>
+        </div>
     </div>
-    <button type="submit">Order a burger</button>
-</form>
+    <div class="row mb-5">
+        <div class="col text-center">
+            <h2>Add a Burger</h2>
+            <form class="create-form form-inline justify-content-center">
+                <div class="form-group">
+                    <label for="bu">Burger Name:</label>
+                    <input class="mx-3" type="text" id="bu" name="name">
+                </div>
+                <button class="btn btn-primary" type="submit">Add Burger</button>
+            </form>
+        </div>
+    </div>
+    <div class="row mb-5">
+        <div class="col-12 col-lg-6 text-center">
+            <h2>Burgers to eat!</h2>
+            <ul class="text-left burger-list">
+                {{#each burgers}}
+                {{#unless devoured}}
+                <li>
+                    <img src="/assets/img/tinyburger.png" alt="burger" width="45px">
+                    {{burger_name}}
+                    <button class="devoured float-right btn btn-success text-right px-2" data-id="{{id}}">
+                        DEVOUR!
+                    </button>
+                    <button class="delete-burger float-right btn btn-danger mr-2 text-right px-2" data-id="{{id}}">
+                        DELETE
+                    </button>
+                </li>
+                {{/unless}}
+                {{/each}}
+            </ul>
+
+        </div>
+        <div class="col-12 col-lg-6 text-center">
+            <h2>Devoured Burgers!</h2>
+            <ul class="text-left">
+                {{#each burgers}}
+                {{#if devoured}}
+                <li>
+                    <img src="/assets/img/tinyburger.png" alt="burger" width="45px">
+                    {{burger_name}}
+                    <button class="delete-burger float-right btn btn-danger px-2" data-id="{{id}}">
+                        DELETE
+                    </button>
+                </li>
+                {{/if}}
+                {{/each}}
+            </ul>
+        </div>
+    </div>
+
+</div>
