updated design and database indexing

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container-fluid" width='100%'>
     <div class="row mb-5">
         <div class="col text-center">
-            <h1>It's Burger Time!</h1>
+            <h1>It's Time for a Burger!</h1>
             <img src="/assets/img/cuteburger.png" alt="burger" width="300px">
-            <h5>Are you ready to devour some burgers???</h5>
+            <h5>Who's Hungry?!</h5>
         </div>
     </div>
     <div class="row mb-5">
@@ -20,7 +20,7 @@
     </div>
     <div class="row mb-5">
         <div class="col-12 col-lg-6 text-center">
-            <h2>Burgers to eat!</h2>
+            <h2>Burger Menu</h2>
             <ul class="text-left burger-list">
                 {{#each burgers}}
                 {{#unless devoured}}
