--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,4 +1,4 @@
-*{
+*, body{
   background-color: #0F0F23;
   color: white;
 }
@@ -26,7 +26,9 @@ li {
   }
   
 .container {
-  max-width: 3500px;
+  max-width: none;
   margin-left: 0px;
-  margin-right:0px;
+  margin-right: 0px;
+  background-color: #0F0F23;
 } 
+
